--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.9"
 services:
   frontend:
     build:
-      context: . 
-    container_name: nextjs-frontend
+      context: .
+    container_name: frontend
     ports:
       - "3000:3000"
     environment:
