--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bWFnaWNhbC1qYXdmaXNoLTQxLmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_k02HgcLMWLSDd1P93jzHs4W3F1F5KaUhdUXJgt1yVL
-NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+NEXT_PUBLIC_BACKEND_URL=http://127.0.0.1:8000
 
 # NEXT_PUBLIC_BACKEND_URL=https://back.auf-sarlu.mg
 
