--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,7 @@
-version: "3.9"
-
 services:
   frontend:
-    build:
-      context: .
-    container_name: frontend
+    build: .
+    container_name: frontend_app
+    restart: always
     ports:
       - "3000:3000"
-    environment:
-      NODE_ENV: production
